--- a/index.html
+++ b/index.html
@@ -39,8 +39,13 @@
                     <h1>Ristorante con Fusion</h1>
                     <p>We take inspiration from the World's best cuisines, and create a unique fusion experience. Our lipsmacking creations will tickle your culinary senses!</p>
                 </div>
-                <div class="col-12 col-sm align-self-center">
+                <div class="col-12 col-sm-3 align-self-center">
                     <img src="img/logo.png" class="img-fluid">
+                </div>
+                <div class="form-group align-self-center">
+                    <div class="col-12 col-sm-3"></div>
+                        <a href="#reserve"><button type="submit" class="btn btn-warning my-small-btn"><strong>Reserve Table</strong></button></a>   
+                    </div>
                 </div>
             </div>
         </div>
@@ -56,7 +61,7 @@
                     <img class="d-flex mr-3 img-thumbnail align-self-center" src="img/uthappizza.png" alt="uttappizza">
                     <div class="media-body">
                         <h2 class="mt-0">Uthappizza <span class="badge badge-danger">HOT</span> <span class="badge badge-pill badge-secondary">$4.99</span></h2>
-                        <p>A unique combination of Indian Uthappam (pancake) and Italian pizza, topped with Cerignola olives, ripe vine cherry tomatoes, Vidalia onion, Guntur chillies and Buffalo Paneer.</p>
+                        <p class="d-none d-sm-block">A unique combination of Indian Uthappam (pancake) and Italian pizza, topped with Cerignola olives, ripe vine cherry tomatoes, Vidalia onion, Guntur chillies and Buffalo Paneer.</p>
                     </div>
                 </div>
             </div>
@@ -68,8 +73,13 @@
                 <h3>This Month's Promotions</h3>
             </div>
             <div class="col col-sm col-md">
-                <h2>Weekend Grand Buffet</h2>
-                <p>Featuring mouthwatering combinations with a choice of five different salads, six enticing appetizers, six main entrees and five choicest desserts. Free flowing bubbly and soft drinks. All for just $19.99 per person </p>
+                <div class="media">
+                    <div class="media-body">
+                        <h2 class="mt-0">Weekend Grand Buffet <span class="badge badge-danger">NEW</span></h2>
+                        <p class="d-none d-sm-block">Featuring mouthwatering combinations with a choice of five different salads, six enticing appetizers, six main entrees and five choicest desserts. Free flowing bubbly and soft drinks. All for just $19.99 per person </p>
+                    </div>
+                    <img class="d-flex img-thumbnail align-self-center" src="img/buffet.png" alt="buffet">
+                </div>        
             </div>
         </div>
 
@@ -83,13 +93,66 @@
                     <div class="media-body">
                         <h2>Alberto Somayya</h2>
                         <h4>Executive Chef</h4>
-                        <p>Award winning three-star Michelin chef with wide International experience having worked closely with whos-who in the culinary world, he specializes in creating mouthwatering Indo-Italian fusion experiences. </p>
+                        <p class="d-none d-sm-block">Award winning three-star Michelin chef with wide International experience having worked closely with whos-who in the culinary world, he specializes in creating mouthwatering Indo-Italian fusion experiences. </p>
                     </div>
                 </div>
             </div>
         </div>
     </div>
-
+    <div class="row row-content align-items-center">
+        <div class="col-12 offset-sm-3 col-sm-6">
+            <div class="card">
+                <h3 class="card-header bg-warning text-white">Reserve a Table</h3>
+                <div class="card-body">
+                    <form id="reserve">
+                        <div class="form-group row">
+                            <lable for="numberofguests" class="col-md-2 col-form-label"><strong>Number of Guests</strong></lable>
+                                <div class="col-12 col-md-6">    
+                                    <div class="form-check form-check-inline">
+                                        <input type="radio" class="form-check-input" id="1" name="1">
+                                        <label class="form-check-label" for="1"><strong>1</strong></label>
+                                    </div>
+                                    <div class="form-check form-check-inline">
+                                        <input type="radio" class="form-check-input" id="2" name="2">
+                                        <label class="form-check-label" for="2"><strong>2</strong></label>
+                                    </div>
+                                    <div class="form-check form-check-inline">
+                                        <input type="radio" class="form-check-input" id="3" name="3">
+                                        <label class="form-check-label" for="3"><strong>3</strong></label>
+                                    </div>
+                                    <div class="form-check form-check-inline">
+                                        <input type="radio" class="form-check-input" id="4" name="4">
+                                        <label class="form-check-label" for="4"><strong>4</strong></label>
+                                    </div>
+                                    <div class="form-check form-check-inline">
+                                        <input type="radio" class="form-check-input" id="5" name="5">
+                                        <label class="form-check-label" for="5"><strong>5</strong></label>
+                                    </div>
+                                    <div class="form-check form-check-inline">
+                                        <input type="radio" class="form-check-input" id="6" name="6">
+                                        <label class="form-check-label" for="6"><strong>6</strong></label>
+                                    </div>  
+                                </div>       
+                        </div>
+                        <div class="form-group row">
+                            <lable for="dateandtime" class="col-12 col-md-2 col-form-label"><strong>Date and Time</strong></lable>
+                            <div class="col-12 col-md-3">
+                                <input type="text" class="form-control" id="date"  name="date" placeholder="Date">
+                            </div>
+                            <div class="col-12 col-md-3">
+                                <input type="text" class="form-control" id="time"  name="time" placeholder="Time">
+                            </div>
+                        </div>
+                        <div class="form-group row">
+                            <div class="col-1 col-md-2"></div>
+                                <button type="submit" class="btn btn-primary">Reserve</button>   
+                            </div>
+                        </div>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </div>
     <footer class="footer">
         <div class="container">
             <div class="row">             
