--- a/index.html
+++ b/index.html
@@ -87,11 +87,84 @@
                 </div>
                 <div class="form-group align-self-center">
                     <div class="col-12 col-sm-3 align-self-center"></div>
-                        <a role="button" class="btn btn-block nav-link btn-warning my-reserve" data-toggle="tooltip" data-html="true" title="or Call us at <br><strong>+852 12345678</strong>" data-placement="bottom" href="#reserve"><strong>Reserve Table</strong></a>   
+                        <a role="button" class="btn btn-block nav-link btn-warning my-reserve" data-toggle="modal" data-target="#reserveModal"><strong>Reserve Table</strong></a>   
                     </div>
                 </div>
             </div>
         </div>
+        <div id="reserveModal" class="modal fade" role="dialog">
+            <div class="modal-dialog modal-lg" role="content">
+                <div class="modal-content text-dark">
+                    <div class="modal-header">
+                        <h4 class="modal-title">Reserve a Table</h4>
+                        <button type="button" class="close" data-dismiss="modal">
+                            &times;
+                        </button>
+                    </div>
+                    <div class="modal-body">
+                        <form id="reserveatable">
+                            <div class="form-group row">
+                                <lable for="numberofguests" class="col-md-2 col-form-label"><strong>Number of Guests</strong></lable>
+                                    <div class="col-12 col-md-6">    
+                                        <div class="form-check form-check-inline">
+                                            <input type="radio" class="form-check-input" id="1" name="1">
+                                            <label class="form-check-label" for="1"><strong>1</strong></label>
+                                        </div>
+                                        <div class="form-check form-check-inline">
+                                            <input type="radio" class="form-check-input" id="2" name="2">
+                                            <label class="form-check-label" for="2"><strong>2</strong></label>
+                                        </div>
+                                        <div class="form-check form-check-inline">
+                                            <input type="radio" class="form-check-input" id="3" name="3">
+                                            <label class="form-check-label" for="3"><strong>3</strong></label>
+                                        </div>
+                                        <div class="form-check form-check-inline">
+                                            <input type="radio" class="form-check-input" id="4" name="4">
+                                            <label class="form-check-label" for="4"><strong>4</strong></label>
+                                        </div>
+                                        <div class="form-check form-check-inline">
+                                            <input type="radio" class="form-check-input" id="5" name="5">
+                                            <label class="form-check-label" for="5"><strong>5</strong></label>
+                                        </div>
+                                        <div class="form-check form-check-inline">
+                                            <input type="radio" class="form-check-input" id="6" name="6">
+                                            <label class="form-check-label" for="6"><strong>6</strong></label>
+                                        </div>  
+                                    </div>       
+                            </div>
+                            <div class="form-group row">
+                                <lable for="section" class="col-md-2 col-form-label"><strong>Section</strong></lable>
+                                    <div class="col-12 col-md-6">
+                                        <div class="btn-group btn-group-toggle" data-toggle="buttons">
+                                            <label class="btn btn-success active">
+                                              <input type="radio" name="options" id="option1" autocomplete="off" checked> Non-Smoking
+                                            </label>
+                                            <label class="btn btn-danger">
+                                              <input type="radio" name="options" id="option2" autocomplete="off"> Smoking
+                                            </label>
+                                        </div>
+                                    </div>
+                            </div>
+                            <div class="form-group row">
+                                <lable for="dateandtime" class="col-12 col-md-2 col-form-label"><strong>Date and Time</strong></lable>
+                                <div class="col-12 col-md-3">
+                                    <input type="text" class="form-control" id="date"  name="date" placeholder="Date">
+                                </div>
+                                <div class="col-12 col-md-3">
+                                    <input type="text" class="form-control" id="time"  name="time" placeholder="Time">
+                                </div>
+                            </div>
+                            <div class="form-group row">
+                                <div class="col-1 col-md-2"></div>
+                                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button> &nbsp;
+                                    <button type="submit" class="btn btn-primary">Reserve</button>   
+                                </div>
+                            </div>
+                        </form>
+                    </div>
+                </div>
+            </div>
+        </div>        
     </header>
 
     <div class="container">
@@ -183,60 +256,7 @@
             </div>
         </div>
     </div>
-    <div class="row row-content align-items-center">
-        <div class="col-12 offset-sm-3 col-sm-6">
-            <div class="card">
-                <h3 class="card-header bg-warning text-white">Reserve a Table</h3>
-                <div class="card-body">
-                    <form id="reserve">
-                        <div class="form-group row">
-                            <lable for="numberofguests" class="col-md-2 col-form-label"><strong>Number of Guests</strong></lable>
-                                <div class="col-12 col-md-6">    
-                                    <div class="form-check form-check-inline">
-                                        <input type="radio" class="form-check-input" id="1" name="1">
-                                        <label class="form-check-label" for="1"><strong>1</strong></label>
-                                    </div>
-                                    <div class="form-check form-check-inline">
-                                        <input type="radio" class="form-check-input" id="2" name="2">
-                                        <label class="form-check-label" for="2"><strong>2</strong></label>
-                                    </div>
-                                    <div class="form-check form-check-inline">
-                                        <input type="radio" class="form-check-input" id="3" name="3">
-                                        <label class="form-check-label" for="3"><strong>3</strong></label>
-                                    </div>
-                                    <div class="form-check form-check-inline">
-                                        <input type="radio" class="form-check-input" id="4" name="4">
-                                        <label class="form-check-label" for="4"><strong>4</strong></label>
-                                    </div>
-                                    <div class="form-check form-check-inline">
-                                        <input type="radio" class="form-check-input" id="5" name="5">
-                                        <label class="form-check-label" for="5"><strong>5</strong></label>
-                                    </div>
-                                    <div class="form-check form-check-inline">
-                                        <input type="radio" class="form-check-input" id="6" name="6">
-                                        <label class="form-check-label" for="6"><strong>6</strong></label>
-                                    </div>  
-                                </div>       
-                        </div>
-                        <div class="form-group row">
-                            <lable for="dateandtime" class="col-12 col-md-2 col-form-label"><strong>Date and Time</strong></lable>
-                            <div class="col-12 col-md-3">
-                                <input type="text" class="form-control" id="date"  name="date" placeholder="Date">
-                            </div>
-                            <div class="col-12 col-md-3">
-                                <input type="text" class="form-control" id="time"  name="time" placeholder="Time">
-                            </div>
-                        </div>
-                        <div class="form-group row">
-                            <div class="col-1 col-md-2"></div>
-                                <button type="submit" class="btn btn-primary">Reserve</button>   
-                            </div>
-                        </div>
-                    </form>
-                </div>
-            </div>
-        </div>
-    </div>
+    
     <footer class="footer">
         <div class="container">
             <div class="row">             
@@ -282,11 +302,6 @@
 <script src="node_modules/jquery/dist/jquery.slim.min.js"></script>
 <script src="node_modules/popper.js/dist/umd/popper.min.js"></script>
 <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
-<script>
-    $(document).ready(function() {
-        $('[data-toggle="tooltip"]').tooltip();
-    });
-</script>
 </body>
 
 </html>
